@@ -268,6 +268,18 @@ class TestBignum < Test::Unit::TestCase
     assert_equal(2**180, (2**80) * o)
   end
 
+  def test_positive_p
+    assert_predicate(T_ONE, :positive?)
+    assert_not_predicate(T_MONE, :positive?)
+    assert_not_predicate(T_ZERO, :positive?)
+  end
+
+  def test_negative_p
+    assert_not_predicate(T_ONE, :negative?)
+    assert_predicate(T_MONE, :negative?)
+    assert_not_predicate(T_ZERO, :negative?)
+  end
+
   def test_mul_balance
     assert_equal(3**7000, (3**5000) * (3**2000))
   end
